-Added missing Touch INT GPIO initialization to pin_mux.c -Changed Touch Wait function to use RT-Thread wait/delay

--- a/makefile.targets
+++ b/makefile.targets
@@ -3,4 +3,4 @@ clean2:
 	-$(RM) $(OBJS) *.elf
 	-@echo ' '
 
-*.elf: $(wildcard ../board/linker_scripts/link.lds)
+*.elf: $(wildcard ..D:/Projects/Personal/VUHFRadioDSP/Software/RT-Thread/VUHFRadioDSP/board/linker_scripts/link.lds)
