--- a/.settings/projcfg.ini
+++ b/.settings/projcfg.ini
@@ -1,5 +1,5 @@
 #RT-Thread Studio Project Configuration
-#Sat Jul 23 14:15:11 BST 2022
+#Sun Jul 24 13:16:16 BST 2022
 cfg_version=v3.0
 board_name=IMXRT1064-NXP-EVK
 example_name=
@@ -7,13 +7,13 @@ hardware_adapter=J-Link
 board_base_nano_proj=False
 project_type=rt-thread
 chip_name=MIMXRT1064DVL6A
-bsp_version=1.0.3
 selected_rtt_version=4.1.0
+bsp_version=1.0.3
 os_branch=full
-project_base_bsp=true
-is_use_scons_build=True
+output_project_path=D\:\\Projects\\Personal\\VUHFRadioDSP\\Software\\RT-Thread\\MIMXRT1060-EVKB
 is_base_example_project=False
-output_project_path=D\:\\Projects\\Personal\\VUHFRadioDSP\\Software\\RT-Thread\\MIMXRT1062\\MIMXRT1062
+is_use_scons_build=True
+project_base_bsp=true
 project_name=MIMXRT1062
-bsp_path=repo/Extract/Board_Support_Packages/RealThread/IMXRT1064-NXP-EVK/1.0.3
 os_version=4.1.0
+bsp_path=repo/Extract/Board_Support_Packages/RealThread/IMXRT1064-NXP-EVK/1.0.3
